--- a/vertx-pin/zero-wf/src/main/resources/authority/auth.flow/queue/ui.config.json
+++ b/vertx-pin/zero-wf/src/main/resources/authority/auth.flow/queue/ui.config.json
@@ -1,6 +1,6 @@
 {
-    "dao": "cn.vertxup.ambient.domain.tables.daos.XMenuDao",
+    "dao": "cn.vertxup.ui.domain.tables.daos.UiViewDao",
     "output": {
-        "group": "type"
+        "group": "workflow"
     }
 }
