--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
         <mongodb.async.version>3.12.11</mongodb.async.version>
         <poi.version>5.2.3</poi.version>
         <poi.schema.version>4.1.2</poi.schema.version>
-        <jedis.version>4.3.0-m2</jedis.version>
+        <jedis.version>4.3.0</jedis.version>
         <j2objc.version>1.3</j2objc.version>
         <checker.version>3.26.0</checker.version>
 
