Fix Issue of Authority

--- a/vertx-pin/zero-rbac/src/main/resources/plugin/rbac/oob/initialize.yml
+++ b/vertx-pin/zero-rbac/src/main/resources/plugin/rbac/oob/initialize.yml
@@ -84,6 +84,6 @@
 -   dao: cn.vertxup.rbac.domain.tables.daos.SPacketDao
     key: key
     unique:
-    - pathId
-    - resourceId
+    - code
+    - resource
     - sigma
