--- a/pom.xml
+++ b/pom.xml
@@ -57,9 +57,9 @@
     </distributionManagement>
     <properties>
         <!-- RC Version Ok -->
-        <jackson.version>2.14.0-rc1</jackson.version>
-        <jackson.databind.version>2.14.0-rc1</jackson.databind.version>
-        <jackson.extension.version>2.14.0-rc1</jackson.extension.version>
+        <jackson.version>2.14.0</jackson.version>
+        <jackson.databind.version>2.14.0</jackson.databind.version>
+        <jackson.extension.version>2.14.0</jackson.extension.version>
 
         <!-- Java Projection Basic Configuration -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -77,7 +77,7 @@
 
         <!-- Database Needed -->
         <hikari.cp.version>5.0.1</hikari.cp.version>
-        <jooq.version>3.17.4</jooq.version>
+        <jooq.version>3.17.5</jooq.version>
         <vertx.jooq.version>6.5.5</vertx.jooq.version>
         <mysql.version>8.0.31</mysql.version>
 
@@ -109,7 +109,7 @@
         <poi.schema.version>4.1.2</poi.schema.version>
         <jedis.version>4.3.1</jedis.version>
         <j2objc.version>1.3</j2objc.version>
-        <checker.version>3.26.0</checker.version>
+        <checker.version>3.27.0</checker.version>
 
         <!-- elasticsearch version -->
         <elasticsearch.version>7.17.7</elasticsearch.version>
@@ -141,7 +141,7 @@
         <protobuf.version>3.21.9</protobuf.version>
         <annotation.api.version>6.0.53</annotation.api.version>
         <gson.version>2.10</gson.version>
-        <picoli.version>4.6.3</picoli.version>
+        <picoli.version>4.7.0</picoli.version>
 
         <!-- Yaml -->
         <yaml.version>1.33</yaml.version>
