--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
         <mongodb.async.version>3.12.11</mongodb.async.version>
         <poi.version>5.2.3</poi.version>
         <poi.schema.version>4.1.2</poi.schema.version>
-        <jedis.version>4.3.1</jedis.version>
+        <jedis.version>4.4.0-m1</jedis.version>
         <j2objc.version>1.3</j2objc.version>
         <checker.version>3.28.0</checker.version>
 
@@ -137,7 +137,7 @@
 
         <!-- Rpc -->
         <vertx.grpc.version>1.6.1</vertx.grpc.version>
-        <grpc.version>1.51.0</grpc.version>
+        <grpc.version>1.51.1</grpc.version>
         <protobuf.version>3.21.11</protobuf.version>
         <annotation.api.version>6.0.53</annotation.api.version>
         <gson.version>2.10</gson.version>
