--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
         <hikari.cp.version>5.0.1</hikari.cp.version>
         <jooq.version>3.17.6</jooq.version>
         <vertx.jooq.version>6.5.5</vertx.jooq.version>
-        <mysql.version>8.0.30</mysql.version>
+        <mysql.version>8.0.31</mysql.version>
 
         <!-- Java Reflection -->
         <reflect.asm.version>1.11.9</reflect.asm.version>
@@ -95,7 +95,7 @@
         <hibernate.validator.version>6.2.5.Final</hibernate.validator.version>
 
         <jwt.version>3.19.3</jwt.version>
-        <jetbrains.version>23.0.0</jetbrains.version>
+        <jetbrains.version>23.1.0</jetbrains.version>
         <guice.version>5.1.0</guice.version>
         <guava.version>31.1-jre</guava.version>
         <scala.version>2.12.17</scala.version>
@@ -112,10 +112,11 @@
         <checker.version>3.28.0</checker.version>
 
         <!-- elasticsearch version -->
-        <elasticsearch.version>7.17.7</elasticsearch.version>
+        <elasticsearch.version>8.5.3</elasticsearch.version>
+        <elasticsearch.client.version>7.17.8</elasticsearch.client.version>
 
         <!-- neo4j search -->
-        <neo4j.version>4.4.10</neo4j.version>
+        <neo4j.version>4.4.11</neo4j.version>
 
         <!-- Apache Common -->
         <common.jexl.version>3.2.1</common.jexl.version>
@@ -140,7 +141,7 @@
         <!-- Rpc -->
         <vertx.grpc.version>1.6.1</vertx.grpc.version>
         <grpc.version>1.51.1</grpc.version>
-        <protobuf.version>3.21.11</protobuf.version>
+        <protobuf.version>3.21.12</protobuf.version>
         <annotation.api.version>6.0.53</annotation.api.version>
         <gson.version>2.10</gson.version>
         <picoli.version>4.7.0</picoli.version>
@@ -820,7 +821,7 @@
             <dependency>
                 <groupId>org.elasticsearch.client</groupId>
                 <artifactId>elasticsearch-rest-high-level-client</artifactId>
-                <version>${elasticsearch.version}</version>
+                <version>${elasticsearch.client.version}</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.apache.logging.log4j</groupId>
