--- a/vertx-gaia/vertx-up/pom.xml
+++ b/vertx-gaia/vertx-up/pom.xml
@@ -23,7 +23,7 @@
         </dependency> -->
         <dependency>
             <groupId>org.glassfish</groupId>
-            <artifactId>javax.el</artifactId>
+            <artifactId>jakarta.el</artifactId>
         </dependency>
         <!-- Jsr 311 Jws -->
         <dependency>
