--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,6 @@
         <jcabi.version>0.24.1</jcabi.version>
         <jersey.version>3.1.0</jersey.version>
         <javax.el.version>3.0.1-b06</javax.el.version>
-        <glassfish.el.version>3.0.1-b12</glassfish.el.version>
 
         <!-- Database Needed -->
         <hikari.cp.version>5.0.1</hikari.cp.version>
@@ -92,9 +91,9 @@
         <etcd.version>2.18.0</etcd.version>
 
         <!-- Bean Validation -->
-        <hibernate.validator.version>6.2.5.Final</hibernate.validator.version>
+        <hibernate.validator.version>8.0.0.Final</hibernate.validator.version>
 
-        <jwt.version>3.19.3</jwt.version>
+        <jwt.version>4.2.1</jwt.version>
         <jetbrains.version>23.1.0</jetbrains.version>
         <guice.version>5.1.0</guice.version>
         <guava.version>31.1-jre</guava.version>
@@ -179,6 +178,7 @@
         <!-- New Uniform Version -->
         <jakarta.activation.version>2.0.1</jakarta.activation.version>
         <jakarta.xml.bind.version>4.0.0</jakarta.xml.bind.version>
+        <jakarta.el.version>5.0.0-M1</jakarta.el.version>
 
         <!-- Testing -->
         <junit.version>4.13.2</junit.version>
@@ -1144,11 +1144,11 @@
                 <artifactId>javax.el-api</artifactId>
                 <version>${javax.el.version}</version>
             </dependency>
-            <!-- https://mvnrepository.com/artifact/org.glassfish/javax.el -->
+            <!-- https://mvnrepository.com/artifact/org.glassfish/jakarta.el -->
             <dependency>
                 <groupId>org.glassfish</groupId>
-                <artifactId>javax.el</artifactId>
-                <version>${glassfish.el.version}</version>
+                <artifactId>jakarta.el</artifactId>
+                <version>${jakarta.el.version}</version>
             </dependency>
             <!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
             <dependency>
