--- a/vertx-istio/zero-ecology/aeon-vie/pom.xml
+++ b/vertx-istio/zero-ecology/aeon-vie/pom.xml
@@ -3,13 +3,13 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>zero-edge</artifactId>
+        <artifactId>zero-ecology</artifactId>
         <groupId>cn.vertxup</groupId>
         <version>0.9.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>aeon-vie</artifactId>
-    <name>Cloud Service:「aeon-vie」Scaffold Platform</name>
+    <name>Focus:「aeon-vie」Scaffold Cloud Application</name>
     <dependencies>
         <!-- Eternal Container -->
         <dependency>
