--- a/vertx-istio/zero-eternal/aeon-cosmos/pom.xml
+++ b/vertx-istio/zero-eternal/aeon-cosmos/pom.xml
@@ -9,5 +9,5 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>aeon-cosmos</artifactId>
-    <name>Cloud:「aeon-cosmos」Configuration</name>
+    <name>Cloud Module:「aeon-cosmos」Configuration</name>
 </project>
