--- a/vertx-istio/zero-eternal/aeon-k8s/pom.xml
+++ b/vertx-istio/zero-eternal/aeon-k8s/pom.xml
@@ -9,5 +9,5 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>aeon-k8s</artifactId>
-    <name>Cloud:「zero-k8s」K8S Module</name>
+    <name>Cloud Module:「zero-k8s」K8S Module</name>
 </project>
