--- a/vertx-istio/zero-eternal/pom.xml
+++ b/vertx-istio/zero-eternal/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>zero-eternal</artifactId>
-    <name>Cloud:「zero-eternal」Zero Eternal Environment</name>
+    <name>Cloud Module:「zero-eternal」Zero Eternal Environment</name>
     <packaging>pom</packaging>
     <modules>
         <module>aeon-inlet</module>     <!-- gRpc Environment -->
