--- a/vertx-pin/zero-ambient/pom.xml
+++ b/vertx-pin/zero-ambient/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>zero-ambient</artifactId>
-    <name>Extension:「zero-ambient」At - Ambient</name>
+    <name>Extension: At「zero-ambient」Ambient</name>
     <dependencies>
         <!-- Kern -->
         <dependency>
