--- a/vertx-pin/zero-battery/pom.xml
+++ b/vertx-pin/zero-battery/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>zero-battery</artifactId>
-    <name>Extension:「zero-battery」Bk - Zero IaaS Platform</name>
+    <name>Extension: Bk「zero-battery」Zero IaaS Platform</name>
     <dependencies>
         <!-- Kern -->
         <dependency>
