--- a/vertx-pin/zero-graphic/pom.xml
+++ b/vertx-pin/zero-graphic/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>zero-graphic</artifactId>
-    <name>Extension:「zero-graphic」Gc - Graphic Module</name>
+    <name>Extension: Gc「zero-graphic」Graphic Module</name>
     <dependencies>
         <!-- Kern -->
         <dependency>
