--- a/vertx-pin/zero-ui/pom.xml
+++ b/vertx-pin/zero-ui/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>zero-ui</artifactId>
-    <name>Extension:「zero-ui」Ui - Web UI ( React )</name>
+    <name>Extension: Ui「zero-ui」Web UI ( React )</name>
     <dependencies>
         <!-- Kern -->
         <dependency>
