--- a/vertx-pin/zero-tpl/src/main/resources/plugin/tpl/oob/initialize.yml
+++ b/vertx-pin/zero-tpl/src/main/resources/plugin/tpl/oob/initialize.yml
@@ -1,6 +1,6 @@
--   dao: cn.vertxup.template.domain.tables.daos.MyMenuDao     # MY_MENU
-    key: key
-    unique:
+- dao: cn.vertxup.tpl.domain.tables.daos.MyMenuDao     # MY_MENU
+  key: key
+  unique:
     - owner
     - type
     - page
