--- a/pom.xml
+++ b/pom.xml
@@ -57,9 +57,9 @@
     </distributionManagement>
     <properties>
         <!-- RC Version Ok -->
-        <jackson.version>2.14.1</jackson.version>
-        <jackson.databind.version>2.14.1</jackson.databind.version>
-        <jackson.extension.version>2.14.1</jackson.extension.version>
+        <jackson.version>2.14.2</jackson.version>
+        <jackson.databind.version>2.14.2</jackson.databind.version>
+        <jackson.extension.version>2.14.2</jackson.extension.version>
 
         <!-- Java Projection Basic Configuration -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -143,7 +143,7 @@
         <protobuf.version>3.21.12</protobuf.version>
         <annotation.api.version>6.0.53</annotation.api.version>
         <gson.version>2.10.1</gson.version>
-        <picoli.version>4.7.0</picoli.version>
+        <picoli.version>4.7.1</picoli.version>
 
         <!-- Yaml -->
         <yaml.version>1.33</yaml.version>
@@ -160,7 +160,7 @@
         <swagger.version>1.6.0</swagger.version>
         <error.prone.version>2.18.0</error.prone.version>
         <reactive.streams.version>1.0.4</reactive.streams.version>
-        <zookeeper.version>3.8.0</zookeeper.version>
+        <zookeeper.version>3.8.1</zookeeper.version>
         <!-- JSR -->
         <!--
             <jsr311.version>1.1.1</jsr311.version>          Replaced by Jersey-Common
@@ -227,6 +227,7 @@
         <maven.plugin.jcabi>0.17.0</maven.plugin.jcabi>
         <maven.plugin.jar>3.2.0</maven.plugin.jar>
         <maven.plugin.project.info>3.4.1</maven.plugin.project.info>
+        <maven.plugin.dependency>3.5.0</maven.plugin.dependency>
 
         <!-- Container -->
         <maven.plugin.fabric8>4.4.2</maven.plugin.fabric8>
@@ -1854,6 +1855,12 @@
     <build>
         <pluginManagement>
             <plugins>
+                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-dependency-plugin -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>${maven.plugin.dependency}</version>
+                </plugin>
                 <!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-maven-plugin -->
                 <plugin>
                     <groupId>org.liquibase</groupId>
@@ -2042,8 +2049,9 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
                     <!-- 输出设置：路径/风格 -->
+                    <outputDirectory>${basedir}/document</outputDirectory>
                     <reportOutputDirectory>${basedir}</reportOutputDirectory>
-                    <destDir>document</destDir>
+                    <!--                    <destDir>document</destDir>-->
                     <!-- 连接配置 -->
                     <doclint>none,-missing</doclint>
                     <!--<stylesheetfile>${basedir}/script/zero.css</stylesheetfile>
