--- a/vertx-pin/zero-tpl/src/main/resources/plugin/tpl/oob/initialize.yml
+++ b/vertx-pin/zero-tpl/src/main/resources/plugin/tpl/oob/initialize.yml
@@ -6,3 +6,18 @@
     - page
     - position
     - uiMenu
+- dao: cn.vertxup.tpl.domain.tables.daos.TplMessageDao     # TPL_MESSAGE
+  key: key
+  unique:
+    - appId
+    - code
+- dao: cn.vertxup.tpl.domain.tables.daos.TplModelDao     # TPL_MODEL
+  key: key
+  unique:
+    - code
+    - sigma
+- dao: cn.vertxup.tpl.domain.tables.daos.TplTicketDao     # TPL_TICKET
+  key: key
+  unique:
+    - code
+    - sigma
