--- a/vertx-pin/zero-vista/infix-hed/pom.xml
+++ b/vertx-pin/zero-vista/infix-hed/pom.xml
@@ -2,18 +2,20 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>vertx-pin</artifactId>
         <groupId>cn.vertxup</groupId>
         <version>0.9.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <artifactId>zero-vista</artifactId>
-    <name>「vertx-vista」Scaffold：Datum Infix</name>
-    <modules>
-        <module>infix-hed</module>
-        <module>infix-mysql</module>
-        <module>infix-oracle</module>
-    </modules>
+
+    <artifactId>infix-hed</artifactId>
+    <name>Scaffold Plugin: HED Runner</name>
+    <dependencies>
+        <dependency>
+            <groupId>cn.vertxup</groupId>
+            <artifactId>zero-ke</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
