--- a/vertx-pin/zero-vista/infix-hed/pom.xml
+++ b/vertx-pin/zero-vista/infix-hed/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>vertx-pin</artifactId>
+        <artifactId>zero-vista</artifactId>
         <groupId>cn.vertxup</groupId>
         <version>0.9.0-SNAPSHOT</version>
     </parent>
