--- a/vertx-import/pom.xml
+++ b/vertx-import/pom.xml
@@ -44,8 +44,8 @@
                 <version>${aspectj.version}</version>
             </dependency>
             <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
+                <groupId>com.mysql</groupId>
+                <artifactId>mysql-connector-j</artifactId>
                 <version>${mysql.version}</version>
             </dependency>
             <dependency>
