--- a/vertx-pin/zero-vista/infix-mysql/pom.xml
+++ b/vertx-pin/zero-vista/infix-mysql/pom.xml
@@ -13,8 +13,8 @@
     <name>Scaffold Plugin: MySQL（infix-mysql）</name>
     <dependencies>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
         </dependency>
         <dependency>
             <groupId>cn.vertxup</groupId>
