--- a/vertx-gaia/pom.xml
+++ b/vertx-gaia/pom.xml
@@ -12,9 +12,10 @@
     <packaging>pom</packaging>
     <name>「vertx-gaia」Zero Kernel Engine</name>
     <modules>
-        <module>vertx-up</module>
+        <module>vertx-ams</module>
         <module>vertx-co</module>
         <module>vertx-tp</module>
+        <module>vertx-up</module>
         <module>vertx-rx</module>
     </modules>
     <build>
