--- a/vertx-gaia/vertx-co/pom.xml
+++ b/vertx-gaia/vertx-co/pom.xml
@@ -8,10 +8,14 @@
         <version>0.9.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>vertx-co</artifactId>
     <name>Kernel:「vertx-co」Infrastructure</name>
     <dependencies>
+        <!-- Zero 规范连接 -->
+        <dependency>
+            <groupId>io.zero</groupId>
+            <artifactId>vertx-ams</artifactId>
+        </dependency>
         <!-- Code Gen -->
         <dependency>
             <groupId>io.vertx</groupId>
