Fn调整（中间版本）

--- a/vertx-gaia/pom.xml
+++ b/vertx-gaia/pom.xml
@@ -12,6 +12,7 @@
     <packaging>pom</packaging>
     <name>「vertx-gaia」Zero Kernel Engine</name>
     <modules>
+        <module>vertx-ams</module>
         <module>vertx-co</module>
         <module>vertx-tp</module>
         <module>vertx-up</module>
