Fix issue of isJObject / isJArray

--- a/vertx-gaia/vertx-ams/pom.xml
+++ b/vertx-gaia/vertx-ams/pom.xml
@@ -73,5 +73,16 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
         </dependency>
+        <!-- Test -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <!-- Io Netty Buffer -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-buffer</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
