--- a/vertx-ifx/zero-ifx-stomp/pom.xml
+++ b/vertx-ifx/zero-ifx-stomp/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>vertx-ifx</artifactId>
         <groupId>cn.vertxup</groupId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>0.9.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>zero-ifx-stomp</artifactId>
