--- a/vertx-semper/aeon-edge/aeon-code/pom.xml
+++ b/vertx-semper/aeon-edge/aeon-code/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>aeon-edge</artifactId>
         <groupId>cn.vertxup</groupId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>0.9.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>aeon-code</artifactId>
