--- a/vertx-gaia/vertx-tp/pom.xml
+++ b/vertx-gaia/vertx-tp/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>vertx-gaia</artifactId>
         <groupId>cn.vertxup</groupId>
-        <version>0.9.0</version>
+        <version>0.9.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <name>Kernel:「vertx-tp」Integration</name>
