--- a/vertx-semper/aeon-eternal/aeon-inlet/pom.xml
+++ b/vertx-semper/aeon-eternal/aeon-inlet/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>aeon-eternal</artifactId>
         <groupId>cn.vertxup</groupId>
-        <version>0.9.0</version>
+        <version>0.9.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>aeon-inlet</artifactId>
